--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-elfinder": "^0.3.12",
         "ckeditor/ckeditor": "4.10",
         "fideloper/proxy": "^4.0",
+        "fx3costa/laravelchartjs": "^2.5",
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
