--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^10.1.0",
+        "chart.js": "^2.7.2",
         "ckeditor": "^4.10.0",
         "install": "^0.12.1"
     }
